--- a/staffapp/templates/staffdetails.html
+++ b/staffapp/templates/staffdetails.html
@@ -43,7 +43,13 @@
                         <path stroke-linecap="round" stroke-linejoin="round"
                             d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
                     </svg>
-                    <p class="items-center text-lg font-bold text-gray-500 dark:text-gray-400">{{ staff.cadre }}</p>
+                    {% if staff.cadre %}
+                        {% if staff.first_name == 'Abieyuwa' %}
+                            <p class="text-lg font-bold text-gray-500 dark:text-gray-400"><em>Permanent Secretary</em></p>
+                            {% else %}
+                                <p class="text-lg font-bold text-gray-500 dark:text-gray-400"><em>{{ staff.cadre }} Cadre</em></p>  
+                        {% endif %}
+                    {% endif %}
                 </span>
             </div> 
 
@@ -52,7 +58,7 @@
                 <span class="text-center">
                     {% if staff.department %}
                         {% if staff.first_name == 'Abieyuwa' %}
-                            <p class="text-lg font-bold text-gray-500 dark:text-gray-400"><em>{{ staff.department }}</em></p>
+                            <p class="text-lg font-bold text-gray-500 dark:text-gray-400"><em>Office of the Permanent Secretary</em></p>
                             {% else %}
                                 <p class="text-lg font-bold text-gray-500 dark:text-gray-400"><em>Department of {{ staff.department }}</em></p>  
                         {% endif %}
