--- a/templates/base.html
+++ b/templates/base.html
@@ -67,10 +67,10 @@
 	</head>
 
 	<!-- Body -->
-	<body class="bg-gray-200 font-sans p-6">
+	<body class="bg-gray-200 font-sans p-6 mx-auto">
         
 		<!-- Navbar -->
-		<nav class="bg-white rounded-md shadow-lg px-2 sm:px-4 py-3 md:py-3 dark:bg-gray-800">
+		<nav class="bg-white rounded-md shadow-lg px-4 lg:px-4 py-3 lg:py-3">
 	
 			<!-- Navbar Container -->
 			<div class="container flex flex-wrap justify-between items-center mx-auto">
@@ -104,7 +104,7 @@
 				<div class="hidden w-full md:block md:w-auto" id="mobile-menu">
 	
 					<!-- Nav List -->
-					<ul class="flex flex-col md:flex-row md:space-x-8 text-gray-600 md:text-gray-600 mt-4 md:mt-0 md:text-md md:font-bold font-bold">
+					<ul class="flex flex-col md:flex-row md:space-x-8 text-gray-600 mt-4 md:mt-0 md:text-md font-bold pr-2">
 	
 						<!-- Home -->
 						<li>
@@ -196,7 +196,7 @@
 	<!-- End Body -->
 	
 	<!-- Footer -->	
-	<footer class="mt-20 bg-none pb-4 bottom-0 md:bottom-0 lg:bottom-0 dark:bg-gray-800">		
+	<footer class="mt-20 bg-none pb-4 bottom-0 md:bottom-0 lg:bottom-0">		
 
 		<!-- Horizontal line -->
 		<hr class="my-6 border border-1 border-gray-300 sm:mx-auto dark:border-gray-700 lg:my-8">
