added JS to close error messages 6PM 05/08/2022

--- a/staffapp/templates/staffdetails.html
+++ b/staffapp/templates/staffdetails.html
@@ -160,9 +160,10 @@
 
                 <!-- Update button -->
                 <a href="{% url 'updatestaff' staff.id %}">
-                    <button type="button" class="inline-flex items-center mr-1 ml-1 px-8 py-2 border border-blue-600 rounded-md shadow-sm 
-                                                text-md font-medium text-white bg-blue-700 hover:border-indigo-500 hover:bg-blue-800 
-                                                text-center focus:outline-none focus:ring-4 focus:ring-offset-2 focus:ring-blue-500">
+                    <button type="button" 
+                            class="inline-flex items-center mr-1 ml-1 px-8 py-2 border border-blue-600 rounded-md shadow-sm 
+                                   text-md font-medium text-white bg-blue-700 hover:border-indigo-500 hover:bg-blue-800 
+                                   text-center focus:outline-none focus:ring-4 focus:ring-offset-2 focus:ring-blue-500">
                         <span class="inline-flex items-center">
                             <svg class="-ml-1 mr-2 h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
                                 fill="currentColor" aria-hidden="true">
@@ -175,9 +176,10 @@
                 </a>
             
                 <!-- Remove -->
-                <button id="openmodal" type="button" class="inline-flex items-center ml-1 px-8 py-2 border border-red-600 rounded-md shadow-sm 
-                                                            text-md font-medium text-white bg-red-600 hover:border-red-700 hover:bg-red-700 
-                                                            focus:outline-none focus:ring-4 focus:ring-offset-2 focus:ring-red-500">
+                <button id="openmodal" type="button" 
+                        class="inline-flex items-center ml-1 px-8 py-2 border border-red-600 rounded-md shadow-sm 
+                               text-md font-medium text-white bg-red-600 hover:border-red-700 hover:bg-red-700 
+                               focus:outline-none focus:ring-4 focus:ring-offset-2 focus:ring-red-500">
                     <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5 text-white" fill="none" viewBox="0 0 24 24"
                         stroke="currentColor" stroke-width="2">
                         <path stroke-linecap="round" stroke-linejoin="round"
