--- a/staffapp/templates/index.html
+++ b/staffapp/templates/index.html
@@ -10,17 +10,17 @@
 	<!-- Body Container -->
 	<div class="grid gap-y-8 place-items-center min-h-auto">
 
-		<div>
+		<div class="px-8">
 
 			<!-- HEADER -->
-			<div class="w-96 md:w-[600px] mt-16 lg:mt-20 overflow-visible">
+			<div class="w-full lg:w-[600px] md:w-[600px] mt-16 lg:mt-20 overflow-visible">
 				<h1 class="text-4xl text-gray-700 font-extrabold text-center">
 					Ministry of Industry, Trade and Cooperatives's Staff Directory
 				</h1>
 			</div>
 	
 			<!-- Search bar container -->
-			<div class="max-w-3xl rounded-lg mt-20 mb-4 w-full">
+			<div class="lg:max-w-3xl md:max-w-4xl rounded-lg mt-20 mb-4 w-full">
 		
 				<!-- Search form -->
 				<form action="{% url 'searchresult' %}" class="flex items-center" method="GET">
@@ -29,15 +29,25 @@
 					<div class="relative w-full">
 						<input type="text" id="simple-search" name="q" 
 									class="bg-white block font-medium border border-4 border-blue-600 text-gray-900 text-lg rounded-lg 
-											focus:border-blue-600 block w-full p-4 md:p-6 ring-2 ring-blue-600 focus:bg-blue-50
-											focus:ring-2 focus:outline-none focus:ring-blue-600"
+											focus:border-blue-400 block w-full p-6 lg:p-6 md:p-6 ring-2 ring-blue-600 focus:bg-blue-400
+											focus:ring-2 focus:outline-none focus:ring-blue-400 focus:placeholder-white"
 									placeholder="Search for a Staff..."
 							required>
+						<!-- X button -->
+						<button type="reset" 
+							class="absolute top-6 right-2 text-white bg-transparent hover:text-blue-600 
+									text-sm p-1.5 ml-auto inline-block items-center align-middle">
+							<svg class="w-6 h-6 text-bold" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+								<path fill-rule="evenodd"
+									d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+									clip-rule="evenodd"></path>
+							</svg>
+						</button>    
 					</div>
 		
 					<!-- Submit Query -->
 					<button type="submit" 
-							class="px-8 p-4 md:py-6 ml-2 text-lg font-bold text-white bg-blue-700 rounded-lg border
+							class="px-8 p-6 md:py-6 ml-2 text-lg font-bold text-white bg-blue-700 rounded-lg border
 									border-2 border-blue-700 hover:border-blue-800 hover:bg-blue-800 focus:ring-0 
 									focus:outline-none focus:ring-blue-700 ">
 						<span class="inline-flex items-center">
@@ -53,6 +63,7 @@
 			
 			</div>
 			<!-- End of Search bar container -->
+
 		</div>
 
 	</div>	
