--- a/staffapp/templates/searchresult.html
+++ b/staffapp/templates/searchresult.html
@@ -11,7 +11,7 @@
     {% include 'snippets/searchbar.html' %}
     
     <!-- Search Result -->
-    <div class="p-6 mt-8 md:p-8 mb-20 md:mb-20 md:pb-4 max-w-3xl bg-white rounded-lg border mx-auto shadow-md min-h-full justify-center">
+    <div class="p-6 mt-8 lg:p-8 md:p-8 -mb-4 lg:-mb-4 lg:pb-4 max-w-3xl bg-white rounded-lg border mx-auto shadow-md justify-center">
         <div class="flex justify-between items-center mb-4">
             <h5 class="text-2xl md:text-3xl font-bold text-gray-900 dark:text-white">
                 Found {{ count_query }} result(s) for "{{ query }}"
