--- a/staffapp/templates/snippets/searchbar.html
+++ b/staffapp/templates/snippets/searchbar.html
@@ -8,12 +8,21 @@
 
             <!-- Input -->
             <input type="text" id="tags" name="q" 
-                    class="bg-white block font-medium border border-none text-gray-900 text-lg rounded-md 
-                            focus:border-blue-500 block w-full p-4  
-                            focus:ring-4 focus:outline-none focus:ring-blue-600
-                            dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 
-                            dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                    placeholder="Search for a Staff..." required>            
+                    class="bg-white block font-medium border border-none text-gray-900 text-lg rounded-md w-full
+                            focus:bg-indigo-300 block p-4 focus:ring-0 focus:outline-none focus:ring-blue-600
+                            focus:placeholder-white"
+                    placeholder="Search for a Staff..." required >
+            
+            <!-- X button -->
+            <button type="reset" 
+                class="absolute top-3.5 right-2 text-white bg-transparent hover:text-blue-600 
+                        text-sm p-1.5 ml-auto inline-block items-center align-middle">
+                <svg class="w-5 h-5 text-bold" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd"
+                        d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+                        clip-rule="evenodd"></path>
+                </svg>
+            </button>           
         </div>
         
 
