--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,7 @@
 	</head>
 
 	<!-- Body -->
-	<body class="bg-gray-200 font-sans p-6 mx-auto">
+	<body class="max-h-auto bg-gray-200 font-sans p-6 mx-auto">
         
 		<!-- Navbar -->
 		<nav class="bg-white rounded-md shadow-lg px-4 lg:px-4 py-3 lg:py-3">
@@ -108,12 +108,13 @@
 	
 						<!-- Home -->
 						<li>
-							<a href="{% url 'index' %}" class="{% active_link 'index' strict=True css_class='text-blue-700 hover:md:border-b-transparent' %} 
-																block py-2 pr-4 pl-3 text-gray-600 border-b border-gray-100 md:border-b-2
-																md:border-transparent md:hover:text-blue-700 md:hover:border-blue-700
-																hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700
-																md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 
-																dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">
+							<a href="{% url 'index' %}" 
+									class="{% active_link 'index' strict=True css_class='text-blue-700 hover:md:border-b-transparent' %} 
+											block py-2 pr-4 pl-3 text-gray-600 border-b border-gray-100 md:border-b-2
+											md:border-transparent md:hover:text-blue-700 md:hover:border-blue-700
+											hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700
+											md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 
+											dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">
 								<span class="inline-flex items-center">
 									<svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" viewBox="0 0 20 20" fill="none" stroke="currentColor"
 										stroke-width="2">
@@ -147,12 +148,13 @@
 	
 						<!-- Staff list -->
 						<li>
-							<a href="{% url 'stafflist' %}" class="{% active_link 'stafflist' css_class='text-blue-700 hover:md:border-b-transparent' %} 
-																	block py-2 pr-4 pl-3 text-gray-600 border-b border-gray-100 md:border-b-2
-																	hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:border-transparent
-																	md:hover:border-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white
-																	md:hover:text-blue-700 dark:hover:bg-gray-700 dark:hover:text-white 
-																	md:dark:hover:bg-transparent dark:border-gray-700">
+							<a href="{% url 'stafflist' %}" 
+									class="{% active_link 'stafflist' css_class='text-blue-700 hover:md:border-b-transparent' %} 
+											block py-2 pr-4 pl-3 text-gray-600 border-b border-gray-100 md:border-b-2
+											hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:border-transparent
+											md:hover:border-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white
+											md:hover:text-blue-700 dark:hover:bg-gray-700 dark:hover:text-white 
+											md:dark:hover:bg-transparent dark:border-gray-700">
 								<span class="inline-flex items-center">
 	
 									<!-- Staff list icon -->
@@ -168,12 +170,13 @@
 	
 						<!-- Birthdays -->
 						<li>
-							<a href="{% url 'birthday' %}" target="_blank" class="{% active_link 'birthday' css_class='text-blue-700 hover:md:border-transparent' %} 
-																					block py-2 pr-4 pl-3 text-gray-600 border-b border-gray-100 hover:bg-gray-50
-																					md:hover:bg-transparent md:border-0 md:border-b-2 md:border-transparent
-																					md:hover:text-blue-700 md:hover:border-blue-700 md:p-0 dark:text-gray-400
-																					md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white 
-																					md:dark:hover:bg-transparent dark:border-gray-700">
+							<a href="{% url 'birthday' %}" target="_blank" 
+									class="{% active_link 'birthday' css_class='text-blue-700 hover:md:border-transparent' %} 
+											block py-2 pr-4 pl-3 text-gray-600 border-b border-gray-100 hover:bg-gray-50
+											md:hover:bg-transparent md:border-0 md:border-b-2 md:border-transparent
+											md:hover:text-blue-700 md:hover:border-blue-700 md:p-0 dark:text-gray-400
+											md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white 
+											md:dark:hover:bg-transparent dark:border-gray-700">
 								<span class="inline-flex items-center">
 									<svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-6 w-6" fill="none"
 										viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
@@ -196,7 +199,7 @@
 	<!-- End Body -->
 	
 	<!-- Footer -->	
-	<footer class="mt-20 bg-none pb-4 bottom-0 md:bottom-0 lg:bottom-0">		
+	<footer class="mt-24 bg-none pb-2 bottom-0 md:bottom-0 lg:bottom-0">		
 
 		<!-- Horizontal line -->
 		<hr class="my-6 border border-1 border-gray-300 sm:mx-auto dark:border-gray-700 lg:my-8">
