created template tag ifinlist 12AM 09/08/2022

--- a/staffapp/templates/snippets/searchbar.html
+++ b/staffapp/templates/snippets/searchbar.html
@@ -27,9 +27,9 @@
         
 
         <!-- Submit Query -->
-        <button type="submit" class="px-8 py-4 ml-2 text-md font-medium text-white bg-blue-700 rounded-md border
-                                    border-2 border-blue-700 hover:border-blue-800 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 
-                                    dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+        <button type="submit" 
+                class="px-8 py-4 ml-2 text-md font-medium text-white bg-blue-700 rounded-md border border-2 border-blue-700 
+                        hover:border-blue-800 hover:bg-blue-800 focus:ring-0 focus:outline-none focus:ring-blue-300 ">
             <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
                 xmlns="http://www.w3.org/2000/svg">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
