--- a/staffapp/templates/updatestaff.html
+++ b/staffapp/templates/updatestaff.html
@@ -65,7 +65,7 @@
                 </div>
 
                 <!-- Bio Details Fields -->
-                <fieldset class="grid gap-6 md:grid-cols-2 lg:grid-cols-2 bg-blue-100 white p-6 shadow-md">
+                <fieldset class="grid gap-6 md:grid-cols-2 lg:grid-cols-2 bg-indigo-100 white p-6 shadow-md">
                     <input type="hidden" name="remember" value="true">                    
 
                     <!-- First Name -->
@@ -137,7 +137,7 @@
                 </div>
 
                 <!-- Official Details Field -->
-                <fieldset class="grid gap-6 md:grid-cols-2 lg:grid-cols-2 p-6 pb-8 bg-blue-100 shadow-md">
+                <fieldset class="grid gap-6 md:grid-cols-2 lg:grid-cols-2 p-6 pb-8 bg-indigo-100 shadow-md">
                     
                     <!-- Official Email -->
                     <div>
@@ -181,7 +181,7 @@
                 
                 
                 <!-- Update and Remove buttons -->
-                <div class="flex items-center mx-auto w-full md:w-[500px] lg:w-[500px] px-2 mt-20 space-x-4">
+                <div class="flex items-center justify-center mx-auto sm:w-96 md:w-96 lg:w-96 px-2 mt-20 space-x-4">
                     <!-- Update -->
                     <button type="submit" 
                             class="relative w-full flex items-center justify-center py-3 px-4 border border-transparent 
