--- a/templates/base.html
+++ b/templates/base.html
@@ -70,7 +70,7 @@
 	<body class="max-h-auto bg-gray-200 font-sans p-6 mx-auto">
         
 		<!-- Navbar -->
-		<nav class="bg-white rounded-md shadow-lg px-4 lg:px-4 py-3 lg:py-3">
+		<nav class="bg-white rounded-md shadow-lg px-4 md:px-4 lg:px-4 py-3 md:py-3 lg:py-3">
 	
 			<!-- Navbar Container -->
 			<div class="container flex flex-wrap justify-between items-center mx-auto">
