--- a/staffapp/templates/addstaff.html
+++ b/staffapp/templates/addstaff.html
@@ -171,7 +171,7 @@
                 </fieldset>
     
                 <!-- Submit Button -->
-                <div class="flex items-center mx-auto justify-center px-2 w-96 mt-20 space-x-4">
+                <div class="flex items-center justify-center mx-auto sm:w-96 md:w-96 lg:w-96 px-2 mt-20 space-x-4">
                     <!-- Add -->
                     <button type="submit" 
                             class="relative w-full flex items-center mx-auto justify-center py-3 px-4 border border-transparent 
