fixed delete_image field 9:00 AM 05/09/2022

--- a/staffapp/templates/addstaff.html
+++ b/staffapp/templates/addstaff.html
@@ -44,8 +44,7 @@
                         
                 <!-- Profile Picture -->
                 <div class="mb-4 flex flex-col items-center">
-                    <img class="mb-4 mt-1 w-32 h-32 rounded-full shadow-sm" src="{% static 'img/default.png' %}"
-                        alt="{{ staff.first_name }} {{ staff.last_name }} image">
+                    <img class="mb-4 mt-1 w-32 h-32 rounded-full shadow-sm" src="{% static 'img/default.png' %}">
                 </div>
     
                 <!-- Form Title -->
