--- a/staffapp/templates/staffdetails.html
+++ b/staffapp/templates/staffdetails.html
@@ -23,8 +23,13 @@
         <div class="flex flex-col items-center px-10 py-8">
 
             <!-- Profile Image -->
-                <img class="mt-1 w-32 h-32 rounded-full shadow-sm" src="{{ staff.profile_picture.url }}"
-                    alt="{{ staff.first_name }} {{ staff.last_name }} image">
+                <img class="mt-1 w-32 h-32 rounded-full shadow-sm" 
+                    {% if staff.delete_image == 1 %}
+                        src="{{ staff.delete_profile_picture.url }}"
+                        {% else %}
+                            src="{{ staff.profile_picture.url }}"
+                    {% endif %}
+                        alt="{{ staff.first_name }} {{ staff.last_name }} image">
             
             <!-- Name -->
             <h5 class="mt-4 text-3xl text-center mx-auto font-extrabold text-gray-800 dark:text-white">
