added 'delete_profile_picture' function 16/9/22

--- a/staffapp/templates/index.html
+++ b/staffapp/templates/index.html
@@ -15,7 +15,7 @@
 			<!-- HEADER -->
 			<div class="w-full lg:w-[600px] md:w-[600px] mt-16 lg:mt-20 overflow-visible">
 				<h1 class="text-4xl text-gray-700 font-extrabold text-center">
-					Ministry of Industry, Trade and Cooperatives's Staff Directory
+					Ministry of Business, Trade and Cooperatives's Staff Directory
 				</h1>
 			</div>
 	
