--- a/templates/base.html
+++ b/templates/base.html
@@ -30,39 +30,6 @@
 			  });
 			} );
 		</script>
-
-		<!-- Search Autocomplete -->
-        <script>
-			$( function() {
-				var availableTags = [
-				"ActionScript",
-				"AppleScript",
-				"Asp",
-				"BASIC",
-				"C",
-				"C++",
-				"Clojure",
-				"COBOL",
-				"ColdFusion",
-				"Erlang",
-				"Fortran",
-				"Groovy",
-				"Haskell",
-				"Java",
-				"JavaScript",
-				"Lisp",
-				"Perl",
-				"PHP",
-				"Python",
-				"Ruby",
-				"Scala",
-				"Scheme"
-				];
-				$( "#tags" ).sendmail.apps.SendmailConfig({
-				source: availableTags
-				});
-			} );
-		</script>
 		{% tailwind_css %}
 	</head>
 
@@ -77,7 +44,7 @@
 	
 				<!-- Logo -->
 				<a href="https://mitc.edostate.gov.ng" class="flex items-center">
-					<img src="{% static 'img/mitc-logo-trans.png' %}" class="mr-3 md:h-8 h-8" alt="MITC-logo">
+					<img src="{% static 'img/mbtc-logo.png' %}" class="mr-3 md:h-9 h-9" alt="MITC-logo">
 					<span class="self-center text-xl text-gray-700 font-extrabold whitespace-nowrap dark:text-white">Staff
 						Directory</span>
 				</a>
@@ -210,13 +177,13 @@
 			<!-- Copyright section -->
 			<span class="block text-md text-gray-500 text-center dark:text-gray-400">Copyright © 2022 
                 <a href="https://mitc.edostate.gov.ng" target="_blank"
-					class="hover:underline">MITC Staff Directory™
+					class="hover:underline">MBTC Staff Directory™
                 </a>. All Rights Reserved.
 			</span>
 
 			<!-- Address -->
 			<span class="text-gray-500 text-center">
-				7th Floor, Block C, Secretariat Building, Sapele Road, Benin City, Edo State, Nigeria
+				7th Floor, Block C, Secretariat Buildings, Sapele Road, Benin City, Edo State, Nigeria
 			</span>
 
 			<!-- Social Media Icons -->
