--- a/birthday/templates/nobirthday.html
+++ b/birthday/templates/nobirthday.html
@@ -31,27 +31,29 @@
             .logo {
                 image-rendering: high-quality;
                 width: 100%;
-                max-width: 18%;
+                max-width: 10%;
             }
         </style>
     </head>
 
-    <body>
-        
+    <body>        
         <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
-            <div class="w3-display-topleft w3-padding-large w3-xlarge">
-                <a href="https://www.wcce.org.ng" target="_blank"><img src="{% static 'img/mitc-logo-trans.png' %}" class="logo"></a>
+            <!-- Logo -->
+            <div class="w3-display-topleft w3-padding-large w3-large">
+                <a href="https://www.wcce.org.ng" target="_blank"><img src="{% static 'img/mbtc-logo.png' %}" class="logo"></a>
             </div>
+
+            <!-- Body -->
             <div class="w3-display-middle">
-                <h1 class="w3-jumbo w3-center">NO BIRTHDAY TODAY</h1>
+                <h1 class="w3-xxxlarge w3-center">NO BIRTHDAY(S) TODAY</h1>
                 <hr class="w3-border-white" style="margin:auto;width:40%">
                 <p class="w3-large w3-center">Hopefully tomorrow</p>
             </div>
+
+            <!-- Footer -->
             <div class="w3-large w3-center w3-display-bottommiddle w3-padding-large">
-                <a href="https://www.wcce.org.ng" target="_blank" style="text-decoration: none">MITC, Edo State</a>
+                <a href="https://www.wcce.org.ng" target="_blank" style="text-decoration: none">MBTC, Edo State</a>
             </div>
         </div>
-
     </body>
-
 </html>
